--- a/res/layout/activity_camera.xml
+++ b/res/layout/activity_camera.xml
@@ -1,16 +1,47 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".CameraActivity" >
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    >
+  <FrameLayout
+    android:id="@+id/camera_preview"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_weight="1"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+ 
+  </FrameLayout>
+   <ImageView 
+      android:id="@+id/Layer1"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+   android:alpha="100"
+    android:src="@drawable/ic_launcher"
+    android:layout_margin="20dp"
+      />
+   
+  <Button
+    android:id="@+id/button_capture"
+    android:text="Capture"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    
+    />
+  <Button
+    android:id="@+id/LoadImageFromGallery"
+    android:text="Gallery"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_toRightOf="@+id/button_capture"
+    />
+  <Button
+    android:id="@+id/combineImage"
+    android:text="MargeImage"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_toRightOf="@+id/LoadImageFromGallery"
+    />
+  
 </RelativeLayout>
